# store_scout

./: LICENSE  README.md  pyproject.toml
data/: data.json
src/: main.py  recommendation.py  utils.py
