[project]
name = "store-scout"
version = "1.0.0"
description = "A recommendation system that searches products from categories in a JSON dataset."
authors = [
    {name = "33Scripts",email = "spatrick0710@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
